# app/Http/Controllers/api/match/MatchController.php
@@ -22,7 +22,7 @@ class MatchController extends Controller
      *     @OA\Response(response="500", description="Fail")
      * )
      */
-    public function  showMatch(String $cid)
+    public function showMatch(String $cid)
     {
         return $this->matchService->showMatch($cid);
     }
@@ -39,7 +39,7 @@ class MatchController extends Controller
      *              @OA\Schema (
      *                  @OA\Property (property="t1_score", type="int", description="1팀의 스코어", example="3"),
      *                  @OA\Property (property="t2_score", type="int", description="2팀의 스코어", example="1"),
-     *                  @OA\Property (property="matched_at", type="timestamp", description="경기 진행 날짜", example="2024-02-13 15:00:00"),
+     *                  @OA\Property (property="matched_at", type="timestamp", description="경기 진행 날짜", example="2024-02-13"),
      *                  @OA\Property (property="state", type="string", description="매치완료 토글버튼", example="Y"),
      *              )
      *          )
@@ -54,4 +54,17 @@ class MatchController extends Controller
     }
 
 
+    /**
+     * @OA\Get (
+     *     path="/api/matches/ranking/{$cid}",
+     *     tags={"경기"},
+     *     description="경기 랭킹표 불러오기",
+     *     @OA\Response(response="200", description="Success"),
+     *     @OA\Response(response="500", description="Fail")
+     * )
+     */
+    public function showRanking(String $cid)
+    {
+        return $this->matchService->showRanking($cid);
+    }
 }
